[project]
name = "EditReward"
version = "0.1.0"
description = "EditReward: A Human-Aligned Reward Model for Instruction-Guided Image Editing"
authors = [
    {name = "Keming Wu"},
    {name = "Sicong Jiang"},
    {name = "Max Ku"},
    {name = "Ping Nie"},
    {name = "Minghao Liu"},
    {name = "Wenhu Chen"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "trl>=0.19.1",
    "torchvision",
    "datasets>=4.2.0",
    "pillow>=11.3.0",
    "openai>=2.3.0",
    "megfile>=4.2.4",
    "sentencepiece>=0.2.1",
    "deepspeed>=0.18.0",
    "fire>=0.7.1",
    "omegaconf>=2.3.0",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "tensorboard>=2.20.0",
    "scipy>=1.15.3",
    "transformers>=4.52.0",
    "accelerate>=1.10.1",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "EditReward"
]

[tool.hatch.build.targets.wheel]
include = [
  "EditReward"
]

[tool.uv]
no-build-isolation-package = ["torch", "torchvision", "flash-attention"]
